---
config:
  theme: neutral
---
erDiagram
    Doctor ||--o{ DoctorPatient : assigned
    Patient ||--o{ DoctorPatient : assigned_to
    Patient ||--o{ VitalSign : has
    Patient ||--o{ Note : has
    Doctor ||--o{ Note : writes
    Doctor ||--o{ AuditLog : performs
    Patient ||--o{ AuditLog : relates_to
    Doctor {
        int id PK
        string email UK
        string password_hash
        string first_name
        string last_name
        string specialty
        datetime created_at
        datetime updated_at
    }
    Patient {
        int id PK
        string uuid UK
        string first_name
        string last_name
        date date_of_birth
        string gender
        string contact_number
        text address
        datetime created_at
        datetime updated_at
    }
    DoctorPatient {
        int doctor_id PK,FK
        int patient_id PK,FK
        datetime assigned_date
    }
    VitalSign {
        int id PK
        int patient_id FK
        enum type
        float value
        string unit
        datetime recorded_at
        enum origin
        datetime created_at
    }
    Note {
        int id PK
        int patient_id FK
        int doctor_id FK
        text content
        datetime created_at
        datetime updated_at
    }
    AuditLog {
        int id PK
        int doctor_id FK
        datetime timestamp
        enum action_type
        enum entity_type
        int entity_id
        text details
        int patient_id FK
        string ip_address
    }
